--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -4,3 +4,13 @@
     <h1>Hello</h1>
   </div>
 </div>
+<div class="row">
+  <div class="col xs12">
+    <nav>
+      <a [routerLink]="['FirstView']">First</a>
+      <a [routerLink]="['SecondView']">Second</a>
+    </nav>
+  </div>
+</div>
+
+<router-outlet></router-outlet>
