--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -185,3 +185,30 @@ html, body, ul {
 html {
   color: #333;
   font-family: now; }
+
+button {
+  background: none;
+  border: 1px solid #888;
+  border-radius: 6px;
+  padding: 10px;
+  cursor: pointer; }
+  button:hover {
+    background-color: #eae0c2; }
+
+a {
+  text-decoration: none;
+  color: #333; }
+
+input {
+  background: none;
+  border: none;
+  border-bottom: 1px solid #888;
+  border-radius: 6px;
+  padding: 2px;
+  text-align: center; }
+
+.col {
+  justify-content: center; }
+
+button {
+  margin-top: 1em; }
