--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -7,8 +7,8 @@
 <div class="row">
   <div class="col xs12">
     <nav>
-      <a [routerLink]="['FirstView']">First</a>
-      <a [routerLink]="['SecondView']">Second</a>
+      <a routerLink="/view1">First</a>
+      <a routerLink="/view2">Second</a>
     </nav>
   </div>
 </div>
